--- a/input.html
+++ b/input.html
@@ -8,16 +8,24 @@
             flex-direction: column;
             gap: 16px;
         }
+        meter-marker {
+            width: 60px;
+            height: 60px;
+            outline: 1px solid black;
+        }
     </style>
 </head>
 <body>
     <section>
         <input-button>test 123 abc</input-button>
         <input-knob min="10" max="20" step="2"></input-knob>
-        <input-range min="1" max="10" step="2"></input-range>
+        <input-range min="1" max="10" step="any"></input-range>
         <input-range orientation="v" min="10" max="20" step="2" value="12"></input-range>
         <input-toggle>toggle</input-toggle>
         <input-vector max="10"></input-vector>
+        <meter-marker min="0" max="1" start="0" end="0.5"></meter-marker>
+        <meter-marker type="knob" min="0.1" max="0.9" start="0"></meter-marker>
+        <meter-marker orientation="v" type="range" min="0" max=".5" start="0" end=".5"></meter-marker>
     </section>
     <script type="module">
         import './lib/index';
@@ -29,6 +37,13 @@
         document.querySelector('input-button').addEventListener('INPUT', (evt) => {
             document.querySelector('input-range').value = 10;
             document.querySelector('input-vector').value = [0, 10];
+        });
+
+        const meters = document.querySelectorAll('meter-marker');
+        document.querySelector('input-range').addEventListener('INPUT', (evt) => {
+            meters.forEach(meter => {
+                meter.end = event.detail.percent
+            });
         });
     </script>
 </body>
