refactor css variable system
- Add input-origin wrapper to input.
- Fix theme.

--- a/input.html
+++ b/input.html
@@ -22,7 +22,7 @@
         <input-range min="1" max="10" step="any"></input-range>
         <input-range orientation="v" min="10" max="20" step="2" value="12"></input-range>
         <input-toggle>toggle</input-toggle>
-        <input-vector max="10"></input-vector>
+        <input-vector min="5" max="10"></input-vector>
         <meter-marker min="0" max="1" start="0" end="0.5"></meter-marker>
         <meter-marker type="knob" min="0.1" max="0.9" start="0"></meter-marker>
         <meter-marker orientation="v" type="range" min="0" max=".5" start="0" end=".5"></meter-marker>
