add theme Neumorphism

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>ctrl-panel</title>
 </head>
 <body>
-    <ctrl-panel theme="test">
+    <ctrl-panel theme="neumorphism">
         <span slot="label">CTRL panel</span>
         <ctrl-vector name="vector" orientation="v" default="[1,1]">vector</ctrl-vector>
         <ctrl-text name="text">text</ctrl-text>
@@ -23,7 +23,7 @@
             <ctrl-slider type="knob" name="vertical" orientation="v">vertical</ctrl-slider>
             <ctrl-slider type="knob" name="step" min="10" max="30" step="2" default="12">step</ctrl-slider>
         </ctrl-group>
-        <ctrl-group name="clamb">
+        <ctrl-group name="clamp">
             <span slot="label">clamp:</span>
             <ctrl-clamp type="range" name="common" default="[3,6]">common</ctrl-clamp>
             <ctrl-clamp type="range" name="vertical" orientation="v">vertical</ctrl-clamp>
