--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     </style>
 </head>
 <body>
-    <ctrl-panel theme="neumorphism">
+    <ctrl-panel theme="flat">
         <span slot="label">CTRL panel:</span>
         <ctrl-vector name="vector" orientation="v" default="[1,1]">vector</ctrl-vector>
         <ctrl-text name="text">text</ctrl-text>
